fix: text alignment on titles in experience component

--- a/portfolio/src/app/components/Experience/Experience.scss
+++ b/portfolio/src/app/components/Experience/Experience.scss
@@ -10,6 +10,13 @@
     }
   }
 
+  .s-title {
+    text-align: left !important;
+    @include mobile {
+      text-align: center !important;
+    }
+  }
+
   &:hover {
     .ico-circle {
       @include transition(all 500ms ease);
